history lecture update

--- a/lectures/history/index.html
+++ b/lectures/history/index.html
@@ -449,13 +449,18 @@
     </div>
    
     <div class="slide">
-      A variable font is a single font file contains many different variations of a typeface, instead of having a separate font file for every width, weight, or style. This format was developed in collaboration by Adobe, Apple, Google, and Microsoft.
-      Advantages of variable fonts
-      - Font loading
-      - HTTP requests
-      - KB of data (depends on character set and design space)
-      - Purer expression of type design process
-      - Designer Options
+      <p>
+        A variable font is a single font file contains many different variations of a typeface, instead of having a separate font file for every width, weight, or style. This format was developed in collaboration by Adobe, Apple, Google, and Microsoft.
+      </p>
+    </div>
+    <div class="slide">
+      <ul>
+        <li>Font loading</li>
+        <li>HTTP requests</li>
+        <li>KB of data (depends on character set and design space)</li>
+        <li>Purer expression of type design process</li>
+        <li>Designer Options</li>
+      </ul>
     </div>
   
    
@@ -465,34 +470,7 @@
         <figcaption>Masters vs. Instances <a href="https://glyphsapp.com/learn/multiple-masters-part-1-setting-up-masters" class="source">Source</a></figcaption>
       </figure>
     </div>
-   
-    <div class="slide">
-      <figure>
-        <img src="img/magmatic-vfviz.png" alt="Magmatic Design Space visualizer">
-        <figcaption>Magmatic Design Space visualizer (Occupant Fonts)</figcaption>
-      </figure>
-    </div>
-   
-    <div class="slide">
-      <figure>
-        <img src="img/magmatic-vfviz2.png" alt="Magmatic Design Space visualizer">
-        <figcaption>Magmatic Design Space visualizer (Occupant Fonts)</figcaption>
-      </figure>
-    </div>
-   
-    <div class="slide">
-    <figure>
-      <img src="img/magmatic-glyphs.png" alt="Magmatic Design Space visualizer">
-      <figcaption>Magmatic in Glyphs (Occupant Fonts)</figcaption>
-    </figure>
-  </div>
-   
-    <div class="slide">
-      <figure>
-        <img src="img/gimlet-responsive.02.png" alt="Gimlet">
-        <figcaption>Gimlet widths and responsive text  <a href="https://djr.com/gimlet" class="source">Source</a></figcaption>
-      </figure>
-    </div>
+  
 
 
     <div class="slide">
@@ -502,13 +480,13 @@
     </div>
 
     <div class="slide">
-      <figure class="pad">
+      <figure>
       <img src="img/caper_ss2.png" class="caper-ss">
       </figure>
     </div>
 
     <div class="slide">
-      <figure class="pad">
+      <figure>
       <img src="img/caper_ss3.png" class="caper-ss">
       </figure>
     </div>
@@ -553,6 +531,20 @@
     <div class="slide">
       <h1 class="magmatic mag-wdth-animate animate" style="font-size: 300px;">H</h1>
     </div>
+
+      <div class="slide">
+        <figure>
+          <img src="img/magmatic-vfviz.png" alt="Magmatic Design Space visualizer">
+          <figcaption>Magmatic Design Space visualizer (Occupant Fonts)</figcaption>
+        </figure>
+      </div>
+     
+      <div class="slide">
+        <figure>
+          <img src="img/magmatic-vfviz2.png" alt="Magmatic Design Space visualizer">
+          <figcaption>Magmatic Design Space visualizer (Occupant Fonts)</figcaption>
+        </figure>
+      </div>
 
     <div class="slide">
       <figure>
@@ -605,13 +597,6 @@
 
     <div class="slide">
       <figure>
-        <video src="img/chee-variable.mp4" muted autoplay loop></video>
-        <figcaption>Chee Variable by Ohno Type, James Edmonson</figcaption>
-      </figure>
-    </div>
-
-    <div class="slide">
-      <figure>
         <table>
         <thead>
         <tr>
@@ -652,6 +637,9 @@
       </figure>
     </div>
 
+    <div class="slide">
+      <h2>Axes of Variation: to be continued</h2>
+    </div>
 
   </main>
   <script src="../script.js"></script>
