[content] updated type tools lecture

--- a/index.html
+++ b/index.html
@@ -157,9 +157,13 @@
 
 		</section>
 		<section id="resources">
+			<h2>Lectures</h2>
+			<ul>
+				<li>Type and Tools</li>
+			</ul>
+
 			<h2>Resources</h2>
 			<ul>
-				<li>Lectures</li>
 				<li>Scripts</li>
 				<li>Tutorials</li>
 			</ul>
