--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</header>
 
 		<section id="syllabus">
-			<a class="anchor" href="#overview"><h2>Overview</h2></a>
+			<h2>Overview</h2>
 			<p>
 				This week, we’ll review the relationship betwen type and technology, from the ways tools can help your type design workflow, to how typefaces can be activated through technology. 
 			</p>
@@ -58,13 +58,12 @@
 						<h5>Morning</h5>
 						<ul>
 							<li>Introductions</li>
-							<li>Lecture: Type and Tools</li>
+							<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
 						</ul>
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Individual Crits</li>
-							<li>Optional Workshop: A modular variable font</li>
+							<li>Individual Crits</li>							
 						</ul>
 					
 					</details>
@@ -80,17 +79,16 @@
 
 						<h5>Morning</h5>
 						<ul>
-							<li>Lecture / Corinne Ang</li>
+							<li>Lecture / <a href="https://corinneang.com/" target="_blank">Corinne Ang</a></li>
 						</ul>
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Demo: Vector Hygiene</li>
+							<li>Review: <a href="lectures/tips/">Tips and Tools</a></li>
 							<li>Demo: Spacing / Stephen Nixon</li>
 							<li>Small Group Crits</li>
 							<li>Optional Workshop: Using components, setting up open-type features</li>
 						</ul>
-					
 					</details>
 				</div>
 			</div>
@@ -109,7 +107,8 @@
 						<h5>Afternoon</h5>
 						<ul>
 							<li>Small Group Crits</li>
-							<li>Workshop: Type Specimen</li>
+							<li>Studio: Type Specimen</li>
+							<li>Optional Workshop: A modular variable font</li>
 						</ul>
 					</details>
 				</div>
@@ -159,7 +158,7 @@
 		<section id="resources">
 			<h2>Lectures</h2>
 			<ul>
-				<li>Type and Tools</li>
+				<li><a href="lectures/type-tools/">Type and Tools</a></li>
 			</ul>
 
 			<h2>Resources</h2>
