--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -32,13 +32,20 @@
     <div class="slide">
       <div class="text">
         <h3>3. Nail down your control characters</h3>
-        get happy with “phones RHODES” and their spacing first, then proceed to other letters
+        Refine your “phones RHODES” and their spacing first, then proceed to other letters
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="text">
+        <h3>4. Look at both the white shapes & black shapes</h3>
+        Pay close attention to the shapes being formed by both the outside outlines and interior outlines.
       </div>
     </div>
 
     <div class="slide">
       <div class="text"> 
-        <h3>4. Testing fonts</h3>
+        <h3>5. Testing fonts</h3>
         Don’t install fonts onto your computer—use the <a href="https://glyphsapp.com/learn/testing-your-fonts-in-adobe-apps" target="_blank">Adobe Fonts folder</a>, and make sure it’s at the root level instead of the user level<br>
         ( <code>/Library/Application Support/Adobe/</code> )
       </div>
