--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 						<h5>Morning</h5>
 						<ul>
-							<li>Lecture / <a href="https://corinneang.com/" target="_blank">Corinne Ang</a></li>
+							<li>Guest Lecture: <a href="https://docs.google.com/presentation/d/1YLTqtBn_8W0nPOcJPXRGoK81Z-ftcUKM7EeM9Y3nv74/edit?usp=sharing" target="_blank">From Point to Point</a> / <a href="https://corinneang.com/" target="_blank">Corinne Ang</a></li>
 						</ul>
 
 						<h5>Afternoon</h5>
@@ -156,9 +156,11 @@
 
 		</section>
 		<section id="resources">
-			<h2>Lectures</h2>
+			<h2>Presentations</h2>
 			<ul>
-				<li><a href="lectures/type-tools/">Type and Tools</a></li>
+				<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
+				<li>Guest Lecture: <a href="https://docs.google.com/presentation/d/1YLTqtBn_8W0nPOcJPXRGoK81Z-ftcUKM7EeM9Y3nv74/edit?usp=sharing" target="_blank">From Point to Point</a> / <a href="https://corinneang.com/" target="_blank">Corinne Ang</a></li>
+				<li>Review: <a href="lectures/tips/">Tips and Tools</a></li>
 			</ul>
 
 			<h2>Resources</h2>
