--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -18,28 +18,30 @@
       <div class="text">
         <h3>1. Print & Proof at Size</h3>
         Don’t be shy with serifs<br>
-        Small details can get lost — make sure your design decisions feel intentional<br>
+        Small details can get lost—make sure your design decisions feel intentional<br>
       </div>
     </div>
 
     <div class="slide">
       <div class="text">
         <h3>2. Draw letters in context</h3>
-       Evaluate them in spacing strings (make a shortcut) and paragraphs—word-o-mat it!<br>
+       Evaluate them in spacing strings (make a shortcut) and<br>
+       paragraphs—word-o-mat it!
       </div>
     </div>
 
     <div class="slide">
       <div class="text">
         <h3>3. Nail down your control characters</h3>
-        Refine your “phones RHODES” and their spacing first, then proceed to other letters
+        Refine your “phones RHODES” and their spacing first,<br> then proceed to other letters
       </div>
     </div>
 
     <div class="slide">
       <div class="text">
-        <h3>4. Look at both the white shapes & black shapes</h3>
-        Pay close attention to the shapes being formed by both the outside outlines and interior outlines.
+        <h3>4. White shapes & black shapes</h3>
+        Pay close attention to shapes being formed by both the outside and interior outlines —<br>
+        consider how the letter contours are carving out spaces.
       </div>
     </div>
 
@@ -48,6 +50,13 @@
         <h3>5. Testing fonts</h3>
         Don’t install fonts onto your computer—use the <a href="https://glyphsapp.com/learn/testing-your-fonts-in-adobe-apps" target="_blank">Adobe Fonts folder</a>, and make sure it’s at the root level instead of the user level<br>
         ( <code>/Library/Application Support/Adobe/</code> )
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="text"> 
+        <h3>6. Consult Glyphs Forum</h3>
+        The <a href="https://forum.glyphsapp.com/" target="_blank">Glyphs Forum</a> has a wealth of information, and searching it is often helpful.<br> The creators are very engaged with responding to inquiries.
       </div>
     </div>
 
