--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tips</title>
+    <title>Tips and Tools</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
   </head>
@@ -9,7 +9,7 @@
   <main>
     <div class="slide divider">
       <div class="text">
-        <h1>Tips and tricks</h1>
+        <h1>Tips and Tools</h1>
         <h2>Considerations in your type design process</h2>
       </div>
     </div>
