--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -32,14 +32,22 @@
 
     <div class="slide">
       <div class="text">
-        <h3>3. Nail down your control characters</h3>
+        <h3>3. Expand your Edit View</h3>
+      The default width of the edit view isn’t wide enough for seeing glyphs well in paragraphs. <br>
+      Go to your Glyphs settings / preferences > Appearance > Text View Width to 2400.
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="text">
+        <h3>4. Nail down your control characters</h3>
         Refine your “phones RHODES” and their spacing first,<br> then proceed to other letters
       </div>
     </div>
 
     <div class="slide">
       <div class="text">
-        <h3>4. White shapes & black shapes</h3>
+        <h3>5. White shapes & black shapes</h3>
         Pay close attention to shapes being formed by both the outside and interior outlines —<br>
         consider how the letter contours are carving out spaces.
       </div>
@@ -47,7 +55,7 @@
 
     <div class="slide">
       <div class="text"> 
-        <h3>5. Testing fonts</h3>
+        <h3>6. Testing fonts</h3>
         Don’t install fonts onto your computer—use the <a href="https://glyphsapp.com/learn/testing-your-fonts-in-adobe-apps" target="_blank">Adobe Fonts folder</a>, and make sure it’s at the root level instead of the user level<br>
         ( <code>/Library/Application Support/Adobe/</code> )
       </div>
@@ -55,7 +63,7 @@
 
     <div class="slide">
       <div class="text"> 
-        <h3>6. Consult Glyphs Forum</h3>
+        <h3>7. Consult Glyphs Forum</h3>
         The <a href="https://forum.glyphsapp.com/" target="_blank">Glyphs Forum</a> has a wealth of information, and searching it is often helpful.<br> The creators are very engaged with responding to inquiries.
       </div>
     </div>
@@ -197,7 +205,7 @@ Rainer Scheichelbauer, one of Glyph’s creators) <a href="https://github.com/me
 
     <div class="slide">
       <div class="text">
-        Download scripts:<br>
+        Download scripts:<br>        
         <a href="select-scripts/Show Spacing String.py" download>Show Spacing String</a><br>
         <a href="select-scripts/Add Extremes to Selection.py" download>Add Extremes to Selection</a>
       </div>
