--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
 							<li>Review: <a href="lectures/tips/">Tips and Tools</a></li>
 							<li>Demo: Spacing / Stephen Nixon</li>
 							<li>Small Group Crits</li>
-							<li>Optional Workshop: Using components, setting up open-type features</li>
 						</ul>
 					</details>
 				</div>
@@ -106,9 +105,9 @@
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Small Group Crits</li>
+							<li>Optional Workshop: Using components, setting up open-type features, variable font settings</li>
+							<li>Individual Crits</li>
 							<li>Studio: Type Specimen</li>
-							<li>Optional Workshop: A modular variable font</li>
 						</ul>
 					</details>
 				</div>
@@ -127,8 +126,8 @@
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Small Group Crits</li>
 							<li>Optional Workshop: Basic Python and the Macro Panel</li>
+							<li>Small Group Crits</li>
 						</ul>
 					</details>
 				</div>
