--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -26,7 +26,7 @@
       <div class="text">
         <h3>2. Draw letters in context</h3>
        Evaluate them in spacing strings (make a shortcut) and<br>
-       paragraphs—word-o-mat it!
+       paragraphs—Word-o-mat it!
       </div>
     </div>
 
@@ -34,7 +34,7 @@
       <div class="text">
         <h3>3. Expand your Edit View</h3>
       The default width of the edit view isn’t wide enough for seeing glyphs well in paragraphs. <br>
-      Go to your Glyphs settings / preferences > Appearance > Text View Width to 2400.
+      Adjust Glyphs settings / preferences > Appearance > Text View Width to at least 24000.
       </div>
     </div>
 
@@ -84,10 +84,6 @@
       <tr>
       <td>Send to background</td>
       <td><code>⌘A (select all) + ⌘J</code></td>
-      </tr>
-      <tr>
-      <td>Toggle between background and foregraound</td>
-      <td><code>⌘B</code></td>
       </tr>
       <tr>
       <td>Toggle between background and foregraound</td>
