[content] technical setups

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
 
 						<h5>Morning</h5>
 						<ul>
-							<li>Type Specimens / Joe Newton</li>
+							<li>Lecture: <a href="https://drive.google.com/file/d/1IS_ZijA-smUCtdJBB7Mf8d2iFE6W5om2/view?usp=drive_link" target="_blank">Type Specimens</a> / Joe Newton</li>
 							<li>Individual <a href="https://docs.google.com/spreadsheets/d/1qTtC4CE_HZtVogv3zf9emQpBNRKRkeP_qvB7CC4zlis/edit#gid=1894678010" target="_blank">Crits</a></li>
 						</ul>
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Optional Workshop: Using components, setting up open-type features, variable font settings</li>
+							<li>Optional Workshop: <a href="lectures/technical-setups/">Technical Setups</a> (Using components, setting up open-type features, variable font settings)</li>
 							<li>Individual <a href="https://docs.google.com/spreadsheets/d/1qTtC4CE_HZtVogv3zf9emQpBNRKRkeP_qvB7CC4zlis/edit#gid=1894678010" target="_blank">Crits</a></li>
 							<li>Studio: Type Specimen</li>
 						</ul>
