--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 				<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
 				<li>Guest Lecture: <a href="https://docs.google.com/presentation/d/1YLTqtBn_8W0nPOcJPXRGoK81Z-ftcUKM7EeM9Y3nv74/edit?usp=sharing" target="_blank">From Point to Point</a> / <a href="https://corinneang.com/" target="_blank">Corinne Ang</a></li>
 				<li>Review: <a href="lectures/tips/">Tips and Tools</a></li>
+				<li>Demo: <a href="lectures/technical-setups/">Technical Setups</a></li>
 			</ul>
 
 			<h2>Resources</h2>
