[content] update slides for day 2 and 3

--- a/lectures/technical-setups/index.html
+++ b/lectures/technical-setups/index.html
@@ -69,11 +69,10 @@
     </div>
 
     <div class="slide">
+      <div class="text">
+      <a href="https://typofonderie.com/help/opentype-features" target="_blank">An overview of features</a><br>
       <a href="https://www.colophon-foundry.org/articles-guides/how-to-use-opentype-features" target="_blank">How to use Open Type features</a>
-    </div>
-
-    <div class="slide">
-      <a href="https://typofonderie.com/help/opentype-features" target="_blank">An overview of features</a>
+      </div>
     </div>
 
     <!-- <div class="slide" data-feature>
@@ -107,11 +106,32 @@
     </div>
 
     <div class="slide divider">
-       <h2>Setting up your <a href="https://glyphsapp.com/learn/creating-a-variable-font" target="_blank">variable font</a></h2>
+       <h1>Variable Fonts</h1>
     </div>
 
     <div class="slide">
+      <div class="text">
+        <h4>Tutorials and Guides</h4>
+       <ul>
+        <li>Glyphs App: Setting up your <a href="https://glyphsapp.com/learn/creating-a-variable-font" target="_blank">variable font</a></li>
+        <li>An extensive <a href="https://v-fonts.com/" target="_blank">collection of variable fonts</a> by Nick Shermann</li>
+        <li>A <a href="https://variablefonts.io/" target="_blank">primer on variable fonts</a> by Google</li>
+      </ul>
+
+      <h4>Testing Variable Fonts</h4>
+      <ul>
+        <li>VF testing, desktop: <a href="https://github.com/justvanrossum/fontgoggles/releases/tag/v1.1">Font Goggles</a></li>
+        <li>VF inspector, online: <a href="https://www.axis-praxis.org/samsa/">Samsa</a></li>
+        <li>VF testing & animation: <a href="https://dinamodarkroom.com/gauntlet/">Dinamo Gauntlet</a></li>
+      </ul>
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="text">
       <h1>Interpolation</h1>
+      Glyphs App: <a href="https://glyphsapp.com/learn/multiple-masters-part-2-keeping-your-outlines-compatible" target="_blank">Keeping Compatible Outlines</a>
+      </div>
     </div>
 
     <div class="slide">
@@ -147,10 +167,6 @@
          <h3>Shape Order</h3>
         <figcaption>Filter > Shape Order</figcaption>
       </figure>
-    </div>
-
-    <div class="slide">
-      <a href="https://glyphsapp.com/learn/multiple-masters-part-2-keeping-your-outlines-compatible" target="_blank">Compatible Outlines</a>
     </div>
 
     <div class="slide">
