--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -47,7 +47,18 @@
 
     <div class="slide">
       <div class="text">
-        <h3>5. White shapes & black shapes</h3>
+        <h3>5. Setup Sample Strings</h3>
+        Under Glyphs > Settings > Sample Strings, setup these spacing strings. You can then access them anytime through Edit > Select Sample Text (⌥ + ⌘F)<br><br>
+        <h4>Uppercase</h4>
+        <code>ABCDEFGHIJKLMNOPQRSTUVWXYZ\n HHAHOHOAOO\n HHBHOHOBOO\n HHCHOHOCOO\n HHDHOHODOO\n HHEHOHOEOO\n HHFHOHOFOO\n HHGHOHOGOO\n HHIHOHOIOO\n HHJHOHOJOO\n HHKHOHOKOO\n HHLHOHOLOO\n HHMHOHOMOO\n HHNHOHONOO\n HHOHOHOOOO\n HHPHOHOPOO\n HHQHOHOQOO\n HHRHOHOROO\n HHSHOHOSOO\n HHTHOHOTOO\n HHUHOHOUOO\n HHVHOHOVOO\n HHWHOHOWOO\n HHXHOHOXOO\n HHYHOHOYOO\n HHZHOHOZOO</code><br><br>
+        <h4>Lowercase</h4>
+        <code>abcdefghiklmnopqrstuvwxyz\n nnanonoaoo\n nnbnonoboo\n nncnonocoo\n nndnonodoo\n nnenonoeoo\n nnfnonofoo\n nngnonogoo\n nnhnonohoo\n nninonoioo\n nnjnonojoo\n nnknonokoo\n nnlnonoloo\n nnmnonomoo\n nnnnononoo\n nnononoooo\n nnpnonopoo\n nnqnonoqoo\n nnrnonoroo\n nnsnonosoo\n nntnonotoo\n nnunonouoo\n nnvnonovoo\n nnwnonowoo\n nnxnonoxoo\n nnynonoyoo\n nnznonozoo\n</code>
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="text">
+        <h3>6. White shapes & black shapes</h3>
         Pay close attention to shapes being formed by both the outside and interior outlines —<br>
         consider how the letter contours are carving out spaces.
       </div>
@@ -55,7 +66,7 @@
 
     <div class="slide">
       <div class="text"> 
-        <h3>6. Testing fonts</h3>
+        <h3>7. Testing fonts</h3>
         Don’t install fonts onto your computer—use the <a href="https://glyphsapp.com/learn/testing-your-fonts-in-adobe-apps" target="_blank">Adobe Fonts folder</a>, and make sure it’s at the root level instead of the user level<br>
         ( <code>/Library/Application Support/Adobe/</code> )
       </div>
@@ -63,13 +74,13 @@
 
     <div class="slide">
       <div class="text"> 
-        <h3>7. Consult Glyphs Forum</h3>
+        <h3>8. Consult Glyphs Forum</h3>
         The <a href="https://forum.glyphsapp.com/" target="_blank">Glyphs Forum</a> has a wealth of information, and searching it is often helpful.<br> The creators are very engaged with responding to inquiries.
       </div>
     </div>
 
     <div class="slide divider">
-      <h2>Keyboard shortcuts</h2>
+      <h1>Keyboard shortcuts</h1>
     </div>
 
     <div class="slide">
@@ -90,12 +101,12 @@
       <td><code>⌘B</code></td>
       </tr>
       <tr>
-      <td>Move by 10 units</td>
-      <td><code>⇧ + arrow keys</code></td>
+      <td>Swap background and foregraound</td>
+      <td><code>⌃ + ⌘J</code></td>
       </tr>
       <tr>
-      <td>Center glyphs</td>
-      <td><code>⇧ + ⌘ + E</code></td>
+      <td>Move by 10 units</td>
+      <td><code>⇧ + arrow keys</code></td>
       </tr>
       <tr>
       <td>Adjust sidebearings, left side (by ten units)</td>
@@ -106,25 +117,33 @@
       <td><code>⌘ + arrow keys ( + ⇧ )</code></td>
       </tr>
       <tr>
-      <td>Align selection</td>
-      <td><code>⇧ + ⌘ + A</code></td>
-      </tr>
-      <tr>
-      <td>Add Extremes points*</td>
-      <td><code>⌘ + click on path</code></td>
-      </tr>
       <tr>
       <td>Kern (by ten units)</td>
       <td><code>⌥ + ⌘ + arrow keys ( + ⇧ )</code></td>
       </tr>
       <tr>
+      <td>Align selection</td>
+      <td><code>⇧ + ⌘A</code></td>
+      </tr>
+      <tr>
+      <td>Add Extremes points*</td>
+      <td><code>⌘ + click on path</code></td>
+      </tr>
       <td>Toggle measurement line</td>
       <td><code>⌃ + ⌥ + ⌘ + drag</code></td>
       </tr>
       <tr>
       <td>Correct Path direction (in all masters)</td>
-      <td><code>(⇧ + ) ⌥ + ⌘ + R</code></td>
+      <td><code>⇧ + ⌘R ( + ⌥ )</code></td>
       </tr>
+      <tr>
+      <td>Move only selected on-curve point (by ten units)</td>
+      <td><code> ⌥ ( + ⇧ )+ arrow keys </code></td>
+      </tr>
+      <tr>
+      <td>Move selected off-curve point symmetrically (by ten units)</td>
+       <td><code>⌃ + ⌥ ( + ⇧ ) + arrow keys</code></td>
+      </tr>     
       </tbody>
       </table>
     </div>
@@ -148,16 +167,30 @@
 
     <div class="slide divider">
       <div class="text">
-        <h2>Plugins</h2>
-        <p>Installable through the Plugin manager</p>
+        <h1>Plugins</h1>
+        <p>Installable through the Plugin manager. Most will add an item under View > Show xxx, but some (such as Word-o-mat) will be accessible through a different menu.</p>
       </div>
     </div>
 
     <div class="slide">
-      <figure>
-        <img src="img/plugins.png">
-        <figcaption>Glyphs plugins, which most available through Plugin Manager<a href="https://glyphsapp.com/learn/multiple-masters-part-1-setting-up-masters" class="source">Source</a></figcaption>
-      </figure>
+      <div class="text">
+        <ul>
+          <li>Angled Handles</li>
+          <li>All Angles (custom plugin at Occupant Fonts)</li>
+          <li>Backdrop</li>
+          <li>Component Order</li>
+          <li>Kerning Values</li>
+          <li>Master Compatibility</li>
+          <li>Master Grid</li>
+          <li>Node Count</li>
+          <li>Smart Plumblines</li>
+          <li>Smooth Node Angle and Proportion</li>
+          <li>Stem Thickness</li>
+          <li>Tops and Bottoms</li>
+          <li>Variable Font Preview 3</li>
+        </ul>
+        <figcaption>Recommended Glyphs plugins, most of which available through Plugin Manager</figcaption>
+      </div>
     </div>
 
     <div class="slide">
@@ -171,14 +204,14 @@
       <div class="text">
         <h3>Word-o-mat!</h3>
         <p>
-          If you run into trouble, check out <a href="https://forum.glyphsapp.com/t/can-t-open-word-o-mat-in-glyphs-3/25510">this post</a> on the forum.
+          Once installed, select the glyphs you want to test (if not running it on all characters,) and activate it through Edit > word-o-mat. If you run into trouble with the installation, check out <a href="https://forum.glyphsapp.com/t/can-t-open-word-o-mat-in-glyphs-3/25510">this post</a> on the forum.
         </p>
       </div>
     </div>
 
      <div class="slide divider">
       <div class="text">
-        <h2>Scripts</h2>
+        <h1>Scripts</h1>
         <p>Installable by saving in Scripts folder / Plugin Manager<br>
           ( Script > Open Scripts Folder in the menu)</p>
       </div>
@@ -201,9 +234,12 @@ Rainer Scheichelbauer, one of Glyph’s creators) <a href="https://github.com/me
 
     <div class="slide">
       <div class="text">
-        Download scripts:<br>        
-        <a href="select-scripts/Show Spacing String.py" download>Show Spacing String</a><br>
-        <a href="select-scripts/Add Extremes to Selection.py" download>Add Extremes to Selection</a>
+        A selection of scripts:<br>
+        <ul>
+        <li><a href="select-scripts/Copy to Background.py" download>Copy to Background</a></li>
+        <li><a href="select-scripts/Center Glyphs.py" download>Center Glyphs</a></li>
+        <li><a href="select-scripts/Show Spacing String.py" download>Show Spacing String</a></li>
+        <li><a href="select-scripts/Add Extremes to Selection.py" download>Add Extremes to Selection</a></li></ul>
       </div>
     </div>
 
