[styles] add basic print styles

--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -67,8 +67,13 @@
     <div class="slide">
       <div class="text"> 
         <h3>7. Testing fonts</h3>
-        Don’t install fonts onto your computer—use the <a href="https://glyphsapp.com/learn/testing-your-fonts-in-adobe-apps" target="_blank">Adobe Fonts folder</a>, and make sure it’s at the root level instead of the user level<br>
-        ( <code>/Library/Application Support/Adobe/</code> )
+        <p>
+        Don’t install fonts onto your computer—use the <a href="https://glyphsapp.com/learn/testing-your-fonts-in-adobe-apps" target="_blank">Adobe Fonts folder</a>, and make sure it’s at the root level instead of the user level.
+        <code>/Library/Application Support/Adobe/</code>
+        </p>
+        <p>
+        If you haven’t done so yet, you can download a sample <a href="https://drive.google.com/file/d/1feI6HZ2pyh8b2vD8lnwOLZOY1Etg6knR/view?usp=sharing">Proof template</a> from the shared Drive—make sure you adapt the font sizes to your intended point size.
+        </p>
       </div>
     </div>
 
