--- a/lectures/fonts-in-realtime/index.html
+++ b/lectures/fonts-in-realtime/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tips and Tools</title>
+    <title>Fonts in Real Time</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
   </head>
@@ -9,205 +9,227 @@
   <main>
     <div class="slide divider">
       <div class="text">
-        <h1>Tips and Tools</h1>
-        <h2>Considerations in your type design process</h2>
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text">
-        <h3>1. Print & Proof at Size</h3>
-        Don’t be shy with serifs<br>
-        Small details can get lost—make sure your design decisions feel intentional<br>
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text">
-        <h3>2. Draw letters in context</h3>
-       Evaluate them in spacing strings (make a shortcut) and<br>
-       paragraphs—word-o-mat it!
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text">
-        <h3>3. Expand your Edit View</h3>
-      The default width of the edit view isn’t wide enough for seeing glyphs well in paragraphs. <br>
-      Go to your Glyphs settings / preferences > Appearance > Text View Width to 2400.
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text">
-        <h3>4. Nail down your control characters</h3>
-        Refine your “phones RHODES” and their spacing first,<br> then proceed to other letters
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text">
-        <h3>5. White shapes & black shapes</h3>
-        Pay close attention to shapes being formed by both the outside and interior outlines —<br>
-        consider how the letter contours are carving out spaces.
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text"> 
-        <h3>6. Testing fonts</h3>
-        Don’t install fonts onto your computer—use the <a href="https://glyphsapp.com/learn/testing-your-fonts-in-adobe-apps" target="_blank">Adobe Fonts folder</a>, and make sure it’s at the root level instead of the user level<br>
-        ( <code>/Library/Application Support/Adobe/</code> )
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text"> 
-        <h3>7. Consult Glyphs Forum</h3>
-        The <a href="https://forum.glyphsapp.com/" target="_blank">Glyphs Forum</a> has a wealth of information, and searching it is often helpful.<br> The creators are very engaged with responding to inquiries.
+        <h1>Fonts in Real Time</h1>
+        <h2>A new interface for typographic expression</h2>
       </div>
     </div>
 
     <div class="slide divider">
-      <h2>Keyboard shortcuts</h2>
+      <h1>Typographic Flexibility</h1>
     </div>
 
     <div class="slide">
-      <table>
-      <thead>
-      <tr>
-      <th>Description</th>
-      <th>Shortcut</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-      <td>Send to background</td>
-      <td><code>⌘A (select all) + ⌘J</code></td>
-      </tr>
-      <tr>
-      <td>Toggle between background and foregraound</td>
-      <td><code>⌘B</code></td>
-      </tr>
-      <tr>
-      <td>Toggle between background and foregraound</td>
-      <td><code>⌘B</code></td>
-      </tr>
-      <tr>
-      <td>Move by 10 units</td>
-      <td><code>⇧ + arrow keys</code></td>
-      </tr>
-      <tr>
-      <td>Center glyphs</td>
-      <td><code>⇧ + ⌘ + E</code></td>
-      </tr>
-      <tr>
-      <td>Adjust sidebearings, left side (by ten units)</td>
-      <td><code>⌃  + arrow keys ( + ⇧ )</code></td>
-      </tr>
-      <tr>
-      <td>Adjust sidebearings, right side (by ten units)</td>
-      <td><code>⌘ + arrow keys ( + ⇧ )</code></td>
-      </tr>
-      <tr>
-      <td>Align selection</td>
-      <td><code>⇧ + ⌘ + A</code></td>
-      </tr>
-      <tr>
-      <td>Add Extremes points*</td>
-      <td><code>⌘ + click on path</code></td>
-      </tr>
-      <tr>
-      <td>Kern (by ten units)</td>
-      <td><code>⌥ + ⌘ + arrow keys ( + ⇧ )</code></td>
-      </tr>
-      <tr>
-      <td>Toggle measurement line</td>
-      <td><code>⌃ + ⌥ + ⌘ + drag</code></td>
-      </tr>
-      <tr>
-      <td>Correct Path direction (in all masters)</td>
-      <td><code>(⇧ + ) ⌥ + ⌘ + R</code></td>
-      </tr>
-      </tbody>
-      </table>
+      <figure>
+        <img src="img/occ-nav.png">
+        <figcaption>Device flexibility, navigation menu for Occupant Fonts <a href="https://occupantfonts.com/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
     </div>
 
     <div class="slide">
-      <div class="text lalign">
-        <p>
-          *Extreme points are on-curve nodes that lie at 90°. They help structure the curves cleanly. By default, Glyphs doesn’t support adding extremes only to a selected segment via keyboard, but you can do this via a script.
-        </p>
-        <p>
-          Generally speaking, keeping the shift pressed adjusts arrow-key increments to 10 units; shift + command adjusts them to 100 units.
-        </p>
-        <p>
-          The selected letter is the glyph on the right side of the cursor. You can adjust both the left and right side bearings of the glyph in this way, using those different keyboard shortcuts above.
-        </p>
-        <p>
-          <em>You may need to disable native Mac keyboard shortcuts for some</em>
-        </p>
-      </div>
+      <figure>
+        <video src="img/textlab_sr.mp4" muted autoplay loop></video>
+        <figcaption>A customizable e-reader with variable weight axis <a href="https://textlab.occupantfonts.com/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/animals_sr.mp4" muted autoplay loop></video>
+        <figcaption>Harmonizing with other scripts and fonts</figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <img src="img/panera_uses.png">
+        <figcaption>Sample uses of Start Script for Panera, by Victoria Rushton</figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure class="wide">
+        <img class="pad" src="img/panera_underline.gif">
+        <figcaption>A variable “underline” glyph for pairing, with 2 stylistic alternates</figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure class="wide">
+         <video src="img/fresh.mp4" muted autoplay loop></video>
+        <figcaption>An optical size axis for various media</figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/recursive_sr.mp4" muted autoplay loop></video>
+        <figcaption>Refined microinteractions, microsite for Stephen Nixon’s Recursive <a href="https://www.recursive.design/" target="_blank" class="source">Site</a> </figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/flex.mp4" muted autoplay loop></video>
+        <figcaption>Grades and optical sizing <a href="https://fonts.google.com/specimen/Roboto+Flex" target="_blank" class="source">Site</a> </figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/chee-variable.mp4" muted autoplay loop></video>
+        <figcaption>Custom Axes for Chee Variable by Ohno Type, James Edmonson <a href="https://v-fonts.com/fonts/cheee-variable" target="_blank" class="source">Source</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/sfsymphony.webm" muted autoplay loop></video>
+        <figcaption>SF Symphony Branding, by COLLINS<a href="https://www.wearecollins.com/work/sf-symphony/" target="_blank" class="source">Source</a></figcaption>
+      </figure>
     </div>
 
     <div class="slide divider">
-      <div class="text">
-        <h2>Plugins</h2>
-        <p>Installable through the Plugin manager</p>
-      </div>
-    </div>
-
-    <div class="slide">
-      <figure>
-        <img src="img/plugins.png">
-        <figcaption>Glyphs plugins, which most available through Plugin Manager<a href="https://glyphsapp.com/learn/multiple-masters-part-1-setting-up-masters" class="source">Source</a></figcaption>
-      </figure>
+      <h1>A Live Interface</h1>
     </div>
 
     <div class="slide">
       <div class="text">
-        <h3>Reporter plugins</h3>
-        <p>The Reporter plugin will help you manage your installed plugins in your right sidebar</p>
-      </div>
-    </div>
-
-    <div class="slide">
-      <div class="text">
-        <h3>Word-o-mat!</h3>
+        <p>Variable font formats provide not necessarily a new way to select a font style—a slider replacing a dropdown menu.
+        </p>
         <p>
-          If you run into trouble, check out <a href="https://forum.glyphsapp.com/t/can-t-open-word-o-mat-in-glyphs-3/25510">this post</a> on the forum.
+          Rather, it is the ability to <em>programmatically</em> specify a precise point in a font’s design space.
         </p>
       </div>
     </div>
 
-     <div class="slide divider">
+    <div class="slide">
       <div class="text">
-        <h2>Scripts</h2>
-        <p>Installable by saving in Scripts folder / Plugin Manager<br>
-          ( Script > Open Scripts Folder in the menu)</p>
+        <h2>
+        <ul>
+          <li>Ink</li>
+          <li>Metal</li>
+          <li>Photo</li>
+          <li>Pixels</li>
+          <li>Vectors</li>
+        </ul>
+        </h2>
       </div>
     </div>
 
     <div class="slide">
+      <h2>Data as input material—variation as response</h2>
+    </div>
+      
+    <div class="slide">
       <figure>
-        <img src="img/scripts.png">
-        <figcaption> Mekkablue (
-Rainer Scheichelbauer, one of Glyph’s creators) <a href="https://github.com/mekkablue/Glyphs-Scripts" target="_blank">scripts</a></figcaption>
+        <video src="img/beowolf.mp4" muted autoplay loop></video>
+        <figcaption>FF Beowulf by Letterror (Just van Rossum and Erik van Blokland,) 1990 <a href="https://letterror.com/fonts/beowolf.html" target="_blank" class="source">Source</a></figcaption>
       </figure>
     </div>
 
     <div class="slide">
       <figure>
-        <img src="img/script-shortcuts.png">
-        <figcaption> You can assign shortcuts to scripts!</figcaption>
+        <img src="img/twincities.jpg">
+        <figcaption>Announcement for a panel on the typeface Twin, Designed By Letterror, 2002</figcaption>
+      </figure>
+    </div>
+
+
+    <div class="slide">
+      <h2>Variation as a function of <em>any input</em></h2>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/typephase.mp4" muted autoplay loop></video>
+        <figcaption>Type Phase, by Elias Hanzer <a href="https://www.eliashanzer.com/phase/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+
+    <div class="slide">
+      <figure>
+        <img src="img/goertek.gif">
+        <figcaption>Goertek, a custom font for a sound company, Kontrapunkt <a href="https://www-kontrapunkt-com.netlify.app/work/goertek" target="_blank" class="source">Source</a></figcaption>
+      </figure>
+    </div>
+
+    
+
+    <div class="slide">
+      <figure>
+        <video src="img/kachi-buwa.mp4" controls autoplay loop></video>
+        <figcaption>Kachi Buwa Variable Font, by Emi Takahashi <a href="https://www.kachibuwa.com/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <img src="img/wind-variable-demo-edited.gif">
+        <figcaption>Wind Variable by Hansje van Halem <a href="https://www.typotheque.com/fonts/wind" target="_blank" class="source">Source</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <img src="img/climate.png">
+        <figcaption>Climate Crisis Font, by Helsingin Sanomat <a href="https://kampanjat.hs.fi/climatefont/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/ra.mp4" muted autoplay loop></video>
+        <figcaption>Radio Amnion, for Jol Thoms, with Minkyoung Kim <a href="https://radioamnion.net/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/moonvf.mp4" muted autoplay loop></video>
+        <figcaption>A monphase variable font</figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/pentad_sr.mp4" muted autoplay loop></video>
+        <figcaption>Seasons in Pentameter by Laurel Schwulst <a href="https://pentad.world/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <img src="img/seasons-all.png">
+        <figcaption>Font-weight mapped to the 72 microseasons of Japan</figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/trekker_sr.mp4" muted autoplay loop></video>
+        <figcaption>Trekker/Browser by Tiger Dingsun <a href="https://pentad.world/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/webtype.mp4" muted autoplay loop></video>
+        <figcaption>Student Work from the class Web Type <a href="https://vf.webtype.xyz/" target="_blank" class="source">Site</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/choreo_sr.mp4" muted autoplay loop></video>
+        <figcaption>Choreo by Dan Luo <a href="https://dluo01.github.io/danluo-web-type/variable-font/index.html" target="_blank" class="source">Site</a></figcaption>
       </figure>
     </div>
 
     <div class="slide">
       <div class="text">
-        Download scripts:<br>        
-        <a href="select-scripts/Show Spacing String.py" download>Show Spacing String</a><br>
-        <a href="select-scripts/Add Extremes to Selection.py" download>Add Extremes to Selection</a>
+        <h2>Variation as an active human interface</h2>
+        <a href="https://variable.occupantfonts.com/">Occupant Fonts Variable Font Guide</a>
       </div>
     </div>
 
