--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 						<h5>Morning</h5>
 						<ul>
-							<li>Lecture: Type in Real Time</li>
+							<li>Lecture: <a href="lectures/typeface-interface/">Typeface as Interface</a></li>
 						</ul>
 
 						<h5>Afternoon</h5>
@@ -163,6 +163,7 @@
 				<li>Review: <a href="lectures/tips/">Tips and Tools</a></li>
 				<li>Lecture: <a href="https://drive.google.com/file/d/1IS_ZijA-smUCtdJBB7Mf8d2iFE6W5om2/view?usp=drive_link" target="_blank">Type Specimens</a> / Joe Newton</li>
 				<li>Demo: <a href="lectures/technical-setups/">Technical Setups</a></li>
+				<li>Lecture: <a href="lectures/typeface-interface/">Typeface as Interface</a></li>
 			</ul>
 		</section>
 	</main>
