--- a/lectures/typeface-interface/index.html
+++ b/lectures/typeface-interface/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fonts in Real Time</title>
+    <title>Typeface as Interface</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
   </head>
@@ -9,8 +9,8 @@
   <main>
     <div class="slide divider">
       <div class="text">
-        <h1>Fonts in Real Time</h1>
-        <h2>A new interface for typographic expression</h2>
+        <h1>Typeface as Interface</h1>
+        <h2>The possibilities of typographic expression with variable fonts</h2>
       </div>
     </div>
 
