--- a/lectures/typeface-interface/index.html
+++ b/lectures/typeface-interface/index.html
@@ -77,7 +77,14 @@
     <div class="slide">
       <figure>
         <video src="img/chee-variable.mp4" muted autoplay loop></video>
-        <figcaption>Custom Axes for Chee Variable by Ohno Type, James Edmonson <a href="https://v-fonts.com/fonts/cheee-variable" target="_blank" class="source">Source</a></figcaption>
+        <figcaption>Custom axes for Chee Variable by Ohno Type, James Edmonson <a href="https://v-fonts.com/fonts/cheee-variable" target="_blank" class="source">Source</a></figcaption>
+      </figure>
+    </div>
+
+    <div class="slide">
+      <figure>
+        <video src="img/risd.mp4" muted autoplay loop></video>
+        <figcaption>Custom stencil font for Rhode Island School of Design, by Ryan Bugden <a href="https://identity.risd.edu/how-we-look" target="_blank" class="source">Source</a></figcaption>
       </figure>
     </div>
 
@@ -187,7 +194,7 @@
     <div class="slide">
       <figure>
         <video src="img/moonvf.mp4" muted autoplay loop></video>
-        <figcaption>A monphase variable font</figcaption>
+        <figcaption>A moonphase variable font</figcaption>
       </figure>
     </div>
 
