[content] day 5 final files

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Full Group Crit: present typeface progress and specimens</li>
+							<li>Small Group Crits: present typeface progress and specimens</li>
+							<li>Demo: <a href="lectures/web-vf/">Variable Fonts on the Web</a></li>
 						</ul>
 					</details>
 				</div>
@@ -160,10 +161,12 @@
 			<ul>
 				<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
 				<li>Guest Lecture: <a href="https://docs.google.com/presentation/d/1YLTqtBn_8W0nPOcJPXRGoK81Z-ftcUKM7EeM9Y3nv74/edit?usp=sharing" target="_blank">From Point to Point</a> / <a href="https://corinneang.com/" target="_blank">Corinne Ang</a></li>
-				<li>Review: <a href="lectures/tips/">Tips and Tools</a></li>
+				<li>Lecture: What is Spacing? / Stephen Nixon</li>
+				<li>Review: <a href="lectures/tips/">General Tips and Tools, Glyphs Plugins & Scripts</a></li>
 				<li>Lecture: <a href="https://drive.google.com/file/d/1IS_ZijA-smUCtdJBB7Mf8d2iFE6W5om2/view?usp=drive_link" target="_blank">Type Specimens</a> / Joe Newton</li>
-				<li>Demo: <a href="lectures/technical-setups/">Technical Setups</a></li>
+				<li>Demo: <a href="lectures/technical-setups/">Open Type Features, Font Info setups</a></li>
 				<li>Lecture: <a href="lectures/typeface-interface/">Typeface as Interface</a></li>
+				<li>Demo: <a href="lectures/web-vf/">Variable Fonts on the Web</a></li>
 			</ul>
 		</section>
 	</main>
