--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 			<ul>
 				<li>Develop familiarity with tools to help your design process</li>
 				<li>Understand the nature of a digital font</li>
-				<li>Familiarize yourself with how variable font formats work, conduct isolated experiment (optional)</li>
+				<li>Familiarize yourself with how variable font formats work</li>
+				<li>Learn how to setup stylistic alternates and other Open Type features</li>
 			</ul>
 		</section>
 
@@ -85,7 +86,7 @@
 						<h5>Afternoon</h5>
 						<ul>
 							<li>Review: <a href="lectures/tips/">Tips and Tools</a></li>
-							<li>Demo: Spacing / Stephen Nixon</li>
+							<li>Demo: <a href="https://drive.google.com/file/d/1YxXD6BWhwIw7WURnfDvVMPWofmmk1U1x/view?usp=sharing">What is Spacing?</a> / Stephen Nixon</li>
 							<li>Small Group Crits</li>
 						</ul>
 					</details>
@@ -161,7 +162,7 @@
 			<ul>
 				<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
 				<li>Guest Lecture: <a href="https://docs.google.com/presentation/d/1YLTqtBn_8W0nPOcJPXRGoK81Z-ftcUKM7EeM9Y3nv74/edit?usp=sharing" target="_blank">From Point to Point</a> / <a href="https://corinneang.com/" target="_blank">Corinne Ang</a></li>
-				<li>Lecture: What is Spacing? / Stephen Nixon</li>
+				<li>Lecture: <a href="https://drive.google.com/file/d/1YxXD6BWhwIw7WURnfDvVMPWofmmk1U1x/view?usp=sharing" target="_blank">What is Spacing?</a> / Stephen Nixon (Arrow Type)</li>
 				<li>Review: <a href="lectures/tips/">General Tips and Tools, Glyphs Plugins & Scripts</a></li>
 				<li>Lecture: <a href="https://drive.google.com/file/d/1IS_ZijA-smUCtdJBB7Mf8d2iFE6W5om2/view?usp=drive_link" target="_blank">Type Specimens</a> / Joe Newton</li>
 				<li>Demo: <a href="lectures/technical-setups/">Open Type Features, Font Info setups</a></li>
