--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 						<h5>Morning</h5>
 						<ul>
 							<li>Introductions</li>
+							<li>Exercise: Contour Drawing</li>
 							<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
 						</ul>
 
