update day 1 links

--- a/index.html
+++ b/index.html
@@ -181,7 +181,18 @@
 			<h2>Slides & Resources</h2>		
 			<ul>
 				<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
+				<li>Overview: <a href="lectures/tips/">Design Tips and Glyphs Tools</a></li>
+				<li>Install from Plugin Manager: Modules, Reporter Toggler, Occupant Scripts, Word-o-mat.</li>
 			</ul>
+			<details>
+			<summary>Tools</summary>
+			<ul>
+				<li><a href="https://github.com/morisawausa/ProofingTool" target="_blank">Glyphs 3 Proofing Tool Plugin</a></li>
+				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>
+				<li><a href="sample-strings/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">set up Sample Strings in Glyphs</a></li>
+			</ul>
+		</details>
+
 			<details>
 			<summary>History</summary>
 			<ul>
@@ -199,14 +210,7 @@
 				<li><a href="https://eyeondesign.aiga.org/parametric-and-variable-typeface-systems-shape-shifters-for-letterforms/">Parametric and Variable Typefaces</a></li>
 			</ul>
 		</details>
-			<details>
-			<summary>Tools</summary>
-			<ul>
-				<li><a href="https://github.com/morisawausa/ProofingTool" target="_blank">Glyphs 3 Proofing Tool Plugin</a></li>
-				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>
-				<li><a href="sample-strings/spacing.txt">Sample Text for Spacing</a></li>
-			</ul>
-		</details>
+
 			<details>
 			<summary>Language Support</summary>
 			<ul>
