--- a/lectures/tips/index.html
+++ b/lectures/tips/index.html
@@ -20,17 +20,18 @@
 
     <section class="slide">
       <div class="text">
-        <h2>Proof and print at size</h2>
-        <p>Know your intended point size. Don’t be shy with serifs. Small details can get lost—make sure your design decisions feel intentional<br>
+        <h2>White shapes & black shapes</h2>
+        <p>
+          Pay close attention to shapes being formed by both the outside and interior outlines—consider how the letter contours are carving out spaces. Focus on one at time: the interior curve, then the exterior curve, and vice versa.
         </p>
       </div>
     </section>
 
     <section class="slide">
       <div class="text">
-        <h2>Draw letters in context</h2>
-       <p>Evaluate them in spacing strings (make a shortcut) and<br>
-       paragraphs—Word-o-mat it!</p>
+        <h2>Proof and print at size</h2>
+        <p>Know your intended point size. Don’t be shy with serifs. Small details can get lost—make sure your design decisions feel intentional.
+        </p>
       </div>
     </section>
 
@@ -60,10 +61,8 @@
 
     <section class="slide">
       <div class="text">
-        <h2>White shapes & black shapes</h2>
-        <p>
-          Pay close attention to shapes being formed by both the outside and interior outlines—consider how the letter contours are carving out spaces.
-        </p>
+        <h2>Draw letters in context</h2>
+       <p>Evaluate them in spacing strings or a paragraph (either through Sample Text or a shortcut for a script) — i.e. with Word-o-mat.</p>
       </div>
     </section>
 
@@ -81,6 +80,9 @@
       <div class="text"> 
         <h2>Consult Glyphs Sites</h2>
         <p>The Glyphs <a href="https://glyphsapp.com/learn/recommendation:get-started" target="_blank">Tutorials</a> and <a href="https://forum.glyphsapp.com/" target="_blank"> Forum</a> has a wealth of information, and searching it is often helpful. The creators are very engaged with responding to inquiries.</p>
+        <p>
+          Here’s a set of tutorials to <a href="https://glyphsapp.com/learn/recommendation:get-started">Getting Started.</a>
+        </p>
       </div>
     </section>
 
@@ -165,7 +167,7 @@
           The selected letter is the glyph on the right side of the cursor. You can adjust both the left and right side bearings of the glyph in this way, using those different keyboard shortcuts above.
         </p>
         <p>
-          <em>You may need to disable native Mac keyboard shortcuts for some</em>
+          ⚠️ <em>You may need to <a href="https://glyphsapp.com/learn/spacing" target="_blank">disable native Mac keyboard shortcuts</a> for some Glyphs shortcuts to work.</em>
         </p>
       </div>
     </section>
@@ -187,8 +189,6 @@
           <li>Component Order</li>
           <li>Kerning Values</li>
           <li>Master Compatibility</li>
-          <li>Master Grid</li>
-          <li>Node Count</li>
           <li>Proofing Tool</li>
           <li>Smart Plumblines</li>
           <li>Smooth Node Angle and Proportion</li>
@@ -216,10 +216,19 @@
       </div>
     </section>
 
+    <section class="slide">
+      <div class="text">
+        <h2>Proofing Tool</h2>
+        <p>
+         A custom plugin developed by Occupant Fonts to support a quick proofing process directly from within Glyphs. Follow the <a href="https://github.com/morisawausa/ProofingTool">Readme</a> for instructions on how to use it.
+        </p>
+      </div>
+    </section>
+
      <section class="slide divider">
       <div class="text">
         <h1>Scripts</h1>
-        <p>Installable by saving in Scripts folder / Plugin Manager<br>
+        <p>Installable via the Plugin Manager<br>
           ( Script > Open Scripts Folder in the menu)</p>
       </div>
     </section>
@@ -227,7 +236,14 @@
     <section class="slide">
       <figure>
         <img src="img/scripts.png">
-        <figcaption> Mekkablue (Rainer Scheichelbauer, one of Glyph’s creators) <a href="https://github.com/mekkablue/Glyphs-Scripts" target="_blank">scripts</a></figcaption>
+        <figcaption> Mekkablue (Rainer Scheichelbauer, one of Glyph’s creators) <a href="https://github.com/mekkablue/Glyphs-Scripts" target="_blank">Readme</a></figcaption>
+      </figure>
+    </section>
+
+    <section class="slide">
+      <figure>
+        <img src="img/occ-scripts.png">
+        <figcaption> Occupant Scripts <a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Readme</a></figcaption>
       </figure>
     </section>
 
