--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
 				<li>Overview: <a href="lectures/tips/">Design Tips and Glyphs Tools</a></li>
 				<li>Install from Plugin Manager: Modules, Reporter Toggler, Occupant Scripts, Word-o-mat.</li>
 			</ul>
-			<details>
+			<details open>
 			<summary>Tools</summary>
 			<ul>
+				<li><a href="sample-strings/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to set up <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">Sample Strings in Glyphs</a>.</li>
 				<li><a href="https://github.com/morisawausa/ProofingTool" target="_blank">Glyphs 3 Proofing Tool Plugin</a></li>
-				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>
-				<li><a href="sample-strings/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">set up Sample Strings in Glyphs</a></li>
+				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>				
 			</ul>
 		</details>
 
