add day 2 materials

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
 			<details open>
 			<summary>Tools</summary>
 			<ul>
-				<li><a href="sample-strings/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to set up <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">Sample Strings in Glyphs</a>.</li>
+				<li><a href="spacing/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to set up <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">Sample Strings in Glyphs</a>.</li>
+				<li><a href="spacing/cyrus-highsmith-spacing-manual.pdf">Spacing Manual</a> by Cyrus Highsmith</li>
 				<li><a href="https://github.com/morisawausa/ProofingTool" target="_blank">Glyphs 3 Proofing Tool Plugin</a></li>
 				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>				
 			</ul>
