--- a/lectures/typeface-interface/index.html
+++ b/lectures/typeface-interface/index.html
@@ -20,7 +20,7 @@
     </section>
 
     <section class="slide">
-    <h2>OpenType 1.8</h2>
+    <h2>OpenType 1.8, 2016</h2>
     </section>
     
     <section class="slide">
@@ -54,10 +54,6 @@
         <img src="img/vfsize.png">
         <figcaption>As a variable font, it is a single file request of 478KB (88% lighter)</figcaption>
       </figure>
-    </section>
-
-    <section class="slide">
-      <h2>Digital letterforms are made of mathematical<br> equations, as functions of time</h2>
     </section>
 
     <section class="slide">
@@ -202,15 +198,15 @@
     </section>
 
     <section class="slide">
-      <figure class="wide">
-        <img class="pad" src="img/panera_underline.gif">
+      <figure>
+        <img class="pad wideimg" src="img/panera_underline.gif">
         <figcaption>A variable “underline” glyph for pairing, with 2 stylistic alternates</figcaption>
       </figure>
     </section>
 
     <section class="slide">
-      <figure class="wide">
-         <video src="img/fresh.mp4" muted autoplay loop></video>
+      <figure>
+         <video class="wideimg" src="img/fresh.mp4" muted autoplay loop></video>
         <figcaption>An optical size axis for various media</figcaption>
       </figure>
     </section>
@@ -248,10 +244,6 @@
         <video src="img/sfsymphony.webm" muted autoplay loop></video>
         <figcaption>SF Symphony Branding, by COLLINS<a href="https://www.wearecollins.com/work/sf-symphony/" target="_blank" class="source">Source</a></figcaption>
       </figure>
-    </section>
-
-    <section class="slide divider">
-      <h1>A Live Interface</h1>
     </section>
 
     <section class="slide">
@@ -296,18 +288,12 @@
       </figure>
     </section>
 
-
-    <section class="slide">
-      <h2>Variation as a function of <em>any input</em></h2>
-    </section>
-
     <section class="slide">
       <figure>
         <video src="img/typephase.mp4" muted autoplay loop></video>
         <figcaption>Type Phase, by Elias Hanzer <a href="https://www.eliashanzer.com/phase/" target="_blank" class="source">Site</a></figcaption>
       </figure>
     </section>
-
 
     <section class="slide">
       <figure>
@@ -388,9 +374,28 @@
       </figure>
     </section>
 
+
+    <section class="slide">
+    <figure>
+      <img class="pad" src="../type-tools/img/bezier-all.gif" alt="Cubic Bezeir">
+      <figcaption>All types of Bezier Curves<a href="https://en.wikipedia.org/wiki/File:Bezier_All_anim.gif" class="source">Source</a></figcaption>
+    </figure>
+    </section>
+
+    <section class="slide">
+       <div class="text">
+          <blockquote style="max-width: 20em;">[Drawing vectors is like] getting a feeling for a piece of math. What you’re doing is basically creating instructions for a piece of software to draw a line. It’s almost like choreography. It may not feel that way, but at the bottom of it it really is, because it’s a function of time.</blockquote>
+          <figcaption>Jürg Lehni</figcaption>
+       </div>
+    </section>
+
+    <section class="slide">
+      <h2>Digital letterforms are made of mathematical<br> equations, as functions of time</h2>
+    </section>
+    
     <section class="slide">
       <div class="text">
-        <h2>Variation as an active human interface</h2>
+        <h2>Typeface as an Interface</h2>
         <a href="https://variable.occupantfonts.com/">Occupant Fonts Variable Font Guide</a>
       </div>
     </section>
