--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
 						
 						<h5>Morning</h5>
 						<ul>
-							<li>Review: Findings from crits</a></li>
-							<li>Lecture: Typeface Interface</li>
+							<li>Review: Findings from crits</a></li>							
 						</ul>
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Demo: Variable Fonts</li>
+							<li>Lecture: <a href="lectures/typeface-interface/">Typeface Interface</a></li>
 							<li>Small Group Crits (+ Stephen) </li>
 							<li>Studio: Refine full alphabet</li>
 						</ul>
@@ -104,10 +103,8 @@
 						</ul>
 
 						<h5>Afternoon</h5>
-
 						<ul>
-							<li>Small Group Crits (+ Stephen)</li>
-							
+							<li>Small Group Crits (+ Stephen)</li>							
 							<li>Optional Workshop: Functional Setups (Using components, setting up open-type features, variable font settings)</li>
 							<li>Studio: Presentation Sketches</li>
 						</ul>
@@ -182,13 +179,14 @@
 			<ul>
 				<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
 				<li>Overview: <a href="lectures/tips/">Design Tips and Glyphs Tools</a></li>
-				<li>Install from Plugin Manager: Modules, Reporter Toggler, Occupant Scripts, Word-o-mat.</li>
+				<li>Install from Plugin Manager: Modules, Reporter Toggler, Occupant Scripts, Word-o-mat. See steps on <a href="https://glyphsapp.com/learn/extending-glyphs" target="_blank">how to install these</a>.</li>
 			</ul>
 			<details open>
 			<summary>Tools</summary>
 			<ul>
-				<li><a href="spacing/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to set up <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">Sample Strings in Glyphs</a>.</li>
+				<li><a href="spacing/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to set up <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">Sample Strings in Glyphs</a></li>
 				<li><a href="spacing/cyrus-highsmith-spacing-manual.pdf">Spacing Manual</a> by Cyrus Highsmith</li>
+				<li><a href="https://jonathanhoefler.com/articles/how-to-proof-a-typeface" target="_blank">Proofing Text</a> by Jonathan Hoefler</li>
 				<li><a href="https://github.com/morisawausa/ProofingTool" target="_blank">Glyphs 3 Proofing Tool Plugin</a></li>
 				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>				
 			</ul>
