--- a/index.html
+++ b/index.html
@@ -120,12 +120,13 @@
 						<h5>Morning</h5>
 						<ul>
 							<li>Lecture: Type Specimens / Joe Newton</li>
+							<li>Lecture: <a href="lectures/technical-setups/">Technical Setups</a></li>
 						</ul>
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Optional Workshop: Basic Python and the Macro Panel OR Using Variable Fonts on the Web</li>
-							<li>Individual Crits</li>
+							<!-- <li>Optional Workshop: Basic Python and the Macro Panel OR Using Variable Fonts on the Web</li> -->
+							<li>Small Group Crits</li>
 						</ul>
 					</details>
 				</div>
